# PracticeCPP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  test.txt
.github/workflows/: ci.yml  release.yml
PracticeC++/: BinaryFiles.cpp  BitManipulator.cpp  BitManipulator.hpp  ExceptionPractice.hpp  HashTable.cpp  HashTable.hpp  LinkedList.cpp  LinkedList.hpp  STLPractice.cpp  STLPractice.hpp  TextFilePractice.cpp  TextFilePractice.hpp  main.cpp  stats.txt
PracticeC++.xcodeproj/: project.pbxproj
PracticeC++.xcodeproj/xcuserdata/scottnovak.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: BinaryFiles.hpp  BitManipulator.hpp  ExceptionPractice.hpp  HashTable.hpp  LinkedList.hpp  Point.hpp  TextFilePractice.hpp
scripts/: analyze.sh  build.sh  build_with_coverage.sh  coverage.sh  format.sh  run_coverage.sh
src/: BinaryFiles.cpp  BitManipulator.cpp  CMakeLists.txt  ExceptionPractice.cpp  HashTable.cpp  LinkedList.cpp  Point.cpp  STLPractice.cpp  TextFilePractice.cpp  main.cpp
tests/: BitManipulatorTest.cpp  CMakeLists.txt  ForceLink.cpp
